--- a/Sharpener's_Tasks/DOM_task8/index.html
+++ b/Sharpener's_Tasks/DOM_task8/index.html
@@ -12,13 +12,15 @@
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
       <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
+      <input type="search" class="inputFilter" name="itemSearch">
     </div>
   </header>
   <div class="container">
    <div id="main" class="card card-body">
     <h2 class="title">Add Items</h2 >
-    <form class="form-inline mb-3">
-      <input type="text" class="form-control mr-2">
+    <form class="form-inline mb-3" id="addForm">
+      <input type="text" class="form-control mr-2" id="item" placeholder="Item Title">
+      <input type="text" class="form-control mr-2" id="description" placeholder="Description">
       <input type="submit" class="btn btn-dark" value="Submit">
     </form>
     <h2 class="title">Items</h2>
