added input from user to local staorage as object

--- a/Sharpener's_Tasks/DOM_task10/index.html
+++ b/Sharpener's_Tasks/DOM_task10/index.html
@@ -13,6 +13,8 @@
             <h3>Appoinment Booking App</h3>
             <label for="person">Your Name</label>
             <input class="input1" type="text" placeholder="Enter Your Name" name="person">
+            <label for="contact">Your Contact</label>
+            <input class="input1" type="text" placeholder="Your contact no....." name="contact">
             <label for="time">Enter Appointment Time</label>
             <input class="input1" type="datetime" placeholder="Appointment Time" name="time">
             <input id="submitbtn" type="submit" value="Submit">
