added object to localeStorage

--- a/Sharpener's_Tasks/DOM_task10/index.html
+++ b/Sharpener's_Tasks/DOM_task10/index.html
@@ -12,11 +12,11 @@
         <form action="" class="inputForm" id="inputf">
             <h3>Appoinment Booking App</h3>
             <label for="person">Your Name</label>
-            <input class="input1" type="text" placeholder="Enter Your Name" name="person">
+            <input class="input1" type="text" placeholder="Enter Your Name" name="person" id="personn">
             <label for="contact">Your Contact</label>
-            <input class="input1" type="text" placeholder="Your contact no....." name="contact">
+            <input class="input1" type="text" placeholder="Your contact no....." name="contact" id="contact1">
             <label for="time">Enter Appointment Time</label>
-            <input class="input1" type="datetime" placeholder="Appointment Time" name="time">
+            <input class="input1" type="date" placeholder="Appointment Time" name="time" id="dateTime">
             <input id="submitbtn" type="submit" value="Submit">
         </form>
     </div>
