--- a/Sharpener's_Tasks/DOM_task10/index.html
+++ b/Sharpener's_Tasks/DOM_task10/index.html
@@ -8,7 +8,7 @@
     <title>Appointment</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="main__comtainer">
         <form action="" class="inputForm" id="inputf">
             <h3>Appoinment Booking App</h3>
             <label for="person">Your Name</label>
