--- a/Sharpener's_Tasks/DOM_task10/index.html
+++ b/Sharpener's_Tasks/DOM_task10/index.html
@@ -20,6 +20,7 @@
             <input id="submitbtn" type="submit" value="Submit">
         </form>
     </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js" integrity="sha512-bHeT+z+n8rh9CKrSrbyfbINxu7gsBmSHlDCb3gUF1BjmjDzKhoKspyB71k0CIRBSjE5IVQiMMVBgCWjF60qsvA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="index.js"></script>    
 </body>
 </html>
