--- a/Sharpener's_Tasks/Appointment_bookig_DOM_task10/index.html
+++ b/Sharpener's_Tasks/Appointment_bookig_DOM_task10/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Appointment</title>
+    <title>Appointment Booking App</title>
 </head>
 <body>
     <div class="container" id="main__container">
@@ -18,6 +18,7 @@
             <label for="time">Enter Appointment Time</label>
             <input class="input1" type="date" placeholder="Appointment Time" name="time" id="dateTime">
             <input id="submitbtn" type="submit" value="Submit">
+            <input id="updatebtn" type="button" value="Update Data">
         </form>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.2/axios.min.js" integrity="sha512-bHeT+z+n8rh9CKrSrbyfbINxu7gsBmSHlDCb3gUF1BjmjDzKhoKspyB71k0CIRBSjE5IVQiMMVBgCWjF60qsvA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
