--- a/Sharpener's_Tasks/async_Expense_tracker/index.html
+++ b/Sharpener's_Tasks/async_Expense_tracker/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/css/main.css">
     <title>Expense Tracker</title>
 </head>
 <body>
+    <header id="header">
+        <nav>
+            <a href="/">Home</a>
+        </nav>
+    </header>
     <div id="main__container" class="container" >
         <h2>Expense Tracker</h2>
         <form action="" method="get" id="inputForm" autocomplete="off">
